fix letter spacing

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -23,7 +23,7 @@ h4,
 h5,
 h6 {
     font-family: $font-family-secondary;
-    letter-spacing: 0.05em; // Adding unit
+    // letter-spacing: 0.05em; // Adding unit
 }
 
 h1 {
